tests/ui/suggestions/private-field.stderr
error[E0609]: no field `cap` on type `S`
  --> $DIR/private-field.rs:7:12
   |
LL |     dbg!(s.cap)
   |            ^^^ unknown field
   |
   = note: available field is: `val`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0609`.
